init maTabData to the correct tab size tdf#92629

Change-Id: I6b226f8e992b3a2b6bcebc44b36ca1f2f06a128e
Reviewed-on: https://gerrit.libreoffice.org/16894
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit ebdc15f93587b59a79a5104f8358841a28940a82)